--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   # PDF rendering
   pdfx: ^2.6.0
 
+  # PDF creation
+  pdf: ^3.10.7
+  printing: ^5.11.1
+
   # File picking
   file_picker: ^6.1.1
 
