Include PDF maps in web build assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,3 +50,17 @@ flutter:
     - assets/Postings/
     - assets/postings.json
     - assets/building_maps.json
+    - Current Maps/Building 200/
+    - Current Maps/Building 203/
+    - Current Maps/Building 205/
+    - Current Maps/Building 206/
+    - Current Maps/Building 211/
+    - Current Maps/Building 212/
+    - Current Maps/Building 242/
+    - Current Maps/Building 306/
+    - Current Maps/Building 308/
+    - Current Maps/Building 315/
+    - Current Maps/Building 316/
+    - Current Maps/Building 350/
+    - Current Maps/Building 367/
+    - Current Maps/Building 400/
